--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^5.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-player": "^3.3.3"
   }
 }
